# dependency-cruiser-vue-sample

./: app.code-workspace  biome.json
apps/taskgraph_generator/: Cargo.toml  README.md  component.taskgraph.json  input.txt
apps/taskgraph_generator/src/: dependencygraph.json  main.rs
apps/vue2/: .dependency-cruiser.js  package.json
apps/vue2/src/components/: ClassStyleComponent.vue  CompanyTable.vue  CompanyTableRow.vue  HelloWorld.vue  TableSection.vue  UserTable.vue  UserTableRow.vue
apps/vue2/src/router/: index.ts  route.ts
apps/vue2/src/store/: index.ts
apps/vue2/src/views/: HomeView.vue
apps/vue3/: .dependency-cruiser.cjs  components.d.ts  dependencygraph.csv  package.json  tsconfig.app.json  vite.config.ts
apps/vue3/src/components/: CompanyTable.vue  CompanyTableRow.vue  CompositionComponent.vue  TableSection.vue  UserTable.vue  UserTableRow.vue
apps/vue3/src/models/: company.ts  user.ts
apps/vue3/src/pages/: HomePage.vue
apps/vue3/src/router/: index.ts  route.ts
