[package]
name = "taskgraph_generator"
version = "0.1.0"
authors = ["Hirekatsu-dev <hirekatsu535@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"
proconio = "0.4.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
